--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,9 @@
-<header class="site-header" role="banner">
-
-  <div class="wrapper">
+<header class="navbar navbar-expand navbar-dark flex-column flex-md-row bd-navbar" role="banner">
+  <img class="logo" src="favicon.png" alt="">
+  <div class="">
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
+    
     <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
 
     {%- if page_paths -%}
