--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="navbar navbar-expand navbar-dark flex-column flex-md-row bd-navbar" role="banner">
-  <img class="logo" src="favicon.png" alt="">
+  <img class="logo" src="/assets/favicon.png" alt="">
   <div class="">
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
